<resources>
    <string name="app_name">ScanX</string>
    <string name="action_settings">Types Setting</string>

    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="default_desc">Align the barcode within the square</string>
    <string name="action_photo_desc">Photo</string>
    <string name="action_light_on_desc">On</string>
    <string name="action_light_off_desc">Off</string>
    <string name="action_produce_desc">Create</string>
    <string name="label_format">format:{format}</string>
    <string name="label_meta">meta:{meta}</string>
    <string name="label_code_value">https://www.google.com</string>
    <string name="label_time">time:{time}</string>
    <string name="label_type">type:{type}</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="scan_hint">Align the barcode within the square</string>
    <string name="flash_off">Flash off</string>
    <string name="about">Dynamsoft Barcode Reader Mobile App Demo (Dynamsoft Barcode Reader SDK)\r\n© 2018 Dynamsoft All rights reserved.\r\n\r\nIntegrate Barcode Reader Functionality into your own Mobile App?\r\n</string>
    <string name="linear">Linear</string>
    <string name="qrcode">QRCode</string>
    <string name="pdf417">PDF417</string>
    <string name="datamatrix">DataMatrix</string>
    <string name="Aztec">Aztec</string>
    <string name="Databar">GS1 DataBar</string>
    <string name="PatchCode">PatchCode</string>
    <string name="MaxiCode">MaxiCode</string>
    <string name="MicroQR">MicroQR</string>
    <string name="MicroPDF417">MicroPDF417</string>
    <string name="GS1Composite">GS1 Composite Code</string>
    <string name="postalcode">Postal Code</string>
    <string name="dotcode">DotCode</string>
    <string name="edit_item_name">Edit Item Name</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="finishEditing">Finish Editing</string>
    <string name="editItem">Edit Item</string>
    <string name="zero">0</string>
    <string name="product_name">Product Name</string>
    <string name="barcode_id">Barcode ID</string>
    <string name="manage_inventory">Manage Inventory</string>
    <string name="quantity_on_hand">Quantity on Hand</string>
    <string name="min_quantity_before_notification">Min. Quantity Before Notification</string>
    <string name="price">Price ($)</string>
    <string name="_0_00">0.00</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_item">Edit Item</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="inventorytab">Inventory</string>
    <string name="flashlight">Flashlight</string>
    <string name="inventory">Inventory</string>
    <string name="history">History</string>
    <string name="search">Search</string>
</resources>
